attempt 2 to fix wrapping

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -204,7 +204,7 @@ a {
     max-width: 1000px;
     text-overflow: ellipsis;
     overflow: hidden;
-    white-space: nowrap
+    white-space: break-word;
 }
 
 footer p {
